Forum Browser Changelog

Current Version : 0.8.0

*** 0.8.0 ***

Fixed: Selecting the post editor list when empty caused error.

*** 0.7.9 ***

Modifed theme in replies for highlighted users
Added default avatar for users without avatar
Fix dialogs and displays for private messages to match the context
Got avatars working for boxee.tv and member status working for boxee.tv and xbmc4xbox.org
Mark sticky threads for all forums (probably including dvhk.pl if I can ever connect to it)
Next/Previous paging buttons now only visible if necessary.

*** 0.7.8 ***

Added avatars to private messages
Fixed avatar image updating issue
Added theme coloring to post message window
Changed colors for xbmc.org
Forums, threads and posts now load in a background thread and are interruptable/cancelable
Fixed bug with xbmc4xboc paging
Improved Forums and Threads window interface.
Fixed handling of nested display tags.
Added the ability to delete private messages (xbmc.org,boxee.tv,dvhk.pl)
Added theming to lists (dark and light) default is to set by forum, but can be overridden in settings.

*** 0.7.7 ***

Re-designed Posts interface
Added Post view with links and images side menus
Added Polish translation - thanks to scalpel
Added ability to view Private messages ('Messages' button) for xbmc.org, boxee.tv and dvhk.pl
Added 'Always Login If Possible' setting, which for now allows updating pm count
Added 'Add Line Before' in post editing context menu
Changed page jumping on posts and threads to handle logged in sort/page number issues
Changed page options in settings to 'Open Thread At Newest Post' and 'Reverse Sort Posts'

*** 0.7.6 ***

Added simplejson import to addon.xml

*** 0.7.5 ***

Fixed some color handling in posts
Fixed some code box handling in posts
Improved post editing preview
Added forum.dvhk.pl
Added ability to handle fourms which require login
Add ability to translate posts with Google Translate
Added language option in settings
Added progress indicators for all windows