@@ -47,7 +47,7 @@
         <description>Topic</description>
         <posx>150</posx>
         <posy>14</posy>
-        <width>750</width>
+        <width>730</width>
         <height>60</height>
         <font>font18</font>
         <textcolor>white</textcolor>
@@ -62,7 +62,7 @@
        <onright>105</onright>
        <onup>120</onup>
        <ondown>120</ondown>
-       <posx>905</posx>
+       <posx>885</posx>
        <posy>31</posy>
        <width>50</width>
        <height>27</height>
@@ -78,7 +78,7 @@
       </control>
       <control type="button" id="105">
         <description>Page Button</description>
-        <posx>960</posx>
+        <posx>940</posx>
         <posy>29</posy>
         <width>230</width>
         <height>30</height>
@@ -96,7 +96,7 @@
       </control>
       <control type="button" id="106">
         <description>Stop Button</description>
-        <posx>1045</posx>
+        <posx>1025</posx>
         <posy>29</posy>
         <width>60</width>
         <height>30</height>
@@ -119,7 +119,7 @@
        <onright>200</onright>
        <onup>120</onup>
        <ondown>120</ondown>
-       <posx>1194</posx>
+       <posx>1174</posx>
        <posy>31</posy>
        <width>50</width>
        <height>27</height>
@@ -133,7 +133,15 @@
        <texturefocus>right-focus.png</texturefocus>
        <texturenofocus>right-nofocus.png</texturenofocus>
       </control>
-      
+      <control type="button" id="110">
+        <description>Close Button</description>
+        <posx>1230</posx>
+        <posy>15</posy>
+        <width>32</width>
+        <height>28</height>
+        <texturefocus>close-button-focus.png</texturefocus>
+        <texturenofocus>close-button.png</texturenofocus>
+      </control>
       <control type="image">
             <description>page header tab icon</description>
             <posx>10</posx>
